sql/core/src/test/resources/sql-tests/results/like-any.sql.out
-- Automatically generated by SQLQueryTestSuite
-- Number of queries: 12


-- !query
CREATE OR REPLACE TEMPORARY VIEW like_any_table AS SELECT * FROM (VALUES
  ('google', '%oo%'),
  ('facebook', '%oo%'),
  ('linkedin', '%in'))
  as t1(company, pat)
-- !query schema
struct<>
-- !query output



-- !query
select company from like_any_table where company like any ('%oo%', '%in', 'fa%')
-- !query schema
struct<company:string>
-- !query output
facebook
google
linkedin


-- !query
select company from like_any_table where company like any ('microsoft', '%yoo%')
-- !query schema
struct<company:string>
-- !query output



-- !query
select
    company,
    CASE
        WHEN company like any ('%oo%', '%in', 'fa%') THEN 'Y'
        ELSE 'N'
    END AS is_available,
    CASE
        WHEN company like any ('%oo%', 'fa%') OR company like any ('%in', 'ms%') THEN 'Y'
        ELSE 'N'
    END AS mix
From like_any_table
-- !query schema
struct<company:string,is_available:string,mix:string>
-- !query output
facebook	Y	Y
google	Y	Y
linkedin	Y	Y


-- !query
select company from like_any_table where company like any ('%zz%', pat)
-- !query schema
struct<company:string>
-- !query output
facebook
google
linkedin


-- !query
select company from like_any_table where company not like any ('%oo%', '%in', 'fa%')
-- !query schema
struct<company:string>
-- !query output
facebook
google
linkedin


-- !query
select company from like_any_table where company not like any ('microsoft', '%yoo%')
-- !query schema
struct<company:string>
-- !query output
facebook
google
linkedin


-- !query
select company from like_any_table where company like any ('%oo%', null)
-- !query schema
struct<company:string>
-- !query output
facebook
google


-- !query
select company from like_any_table where company not like any ('%oo%', null)
-- !query schema
struct<company:string>
-- !query output
linkedin


-- !query
select company from like_any_table where company like any (null, null)
-- !query schema
struct<company:string>
-- !query output



-- !query
select company from like_any_table where company not like any (null, null)
-- !query schema
struct<company:string>
-- !query output



-- !query
select company from like_any_table where company like any ()
-- !query schema
struct<>
-- !query output
org.apache.spark.sql.catalyst.parser.ParseException

Syntax error: expected something between '(' and ')'.(line 1, pos 49)

== SQL ==
select company from like_any_table where company like any ()
-------------------------------------------------^^^
